--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -21,17 +21,17 @@
                         <a href="index.html" title="Accueil">ACCUEIL</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="index.html" title="Menu">MENU</a>
+                        <a href="#menu" title="Menu">MENU</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="index.html" 
+                        <a href="#notreHistoire" 
                         title="Notre histoire">NOTRE HISTOIRE</a>
                     </li>
                     <li class="menuItem">
                         <a href="apropos.html" title="La team">LA TEAM</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="index.html" 
+                        <a href="#NosPartenaires" 
                         title="Nos partenaires">NOS PARTENAIRES</a>
                     </li>
                     <li class="menuItem">
@@ -108,57 +108,85 @@
             </div>
             <div class="background">
                 <div class="container_first">
-                    <div class="concept">
+                    <div id="menu">
+                        <h2 class="h2NotreConcept">
+                            <hr>
+                            NOTRE CONCEPT
+                            <hr>
+                        </h2>
                         <div class="concept_container1">
-                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
-                            <h3>
-                                Plat
-                            </h3>
-                            <p>
-                                accompagnement
-                            </p>
-                            <img class="imge_prix1" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
-
+                            <div>
+                                <img class="image_plat" src="images/Steak.png" alt="plat PNG">
+                            </div>
+                            <div>
+                                <h3>
+                                    Plat
+                                </h3>
+                                <p>
+                                    accompagnement
+                                </p>
+                            </div>
+                            <div class="prix_menu1">
+                                <p>
+                                    9.90
+                                </p>
+                            </div>
                         </div>
                         <div class="concept_container2">
-                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
-                            <h3>
-                                Plat
-                            </h3>
-                            <p>
-                                accompagnement
-                            </p>
-                            <p>
-                                boisson
-                            </p>
-                            <img class="imge_prix2" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
+                             <div>
+                                <img class="image_plat" src="images/steak2.png" alt="plat PNG">
+                            </div>
+                            <div>
+                                <h3>
+                                    Plat
+                                </h3>
+                                <p>
+                                    accompagnement
+                                </p>
+                                <p>
+                                    boisson
+                                </p>
+                            </div>
+                            <div class="prix_menu2">
+                                <p>
+                                    11.40
+                                </p>
+                            </div>
                         </div>
                         <div class="concept_container3">
-                            <img class="image_plat" src="images/NOTRE HISTOIRE.PNG" alt="plat PNG">
-                            <h3>
-                                Plat
-                            </h3>
-                            <p>
-                                accompagnement
-                            </p>
-                            <p>
-                                boisson
-                            </p>
-                            <p>
-                                dessert
-                            </p>
-                            <img class="imge_prix3" src="images/NOTRE HISTOIRE.PNG" alt="Prix du Menu">
-
+                            <div>
+                                <img class="image_plat" src="images/steak3.png" alt="plat PNG">
+                            </div>
+                            <div>
+                                <h3>
+                                    Plat
+                                </h3>
+                                <p>
+                                    accompagnement
+                                </p>
+                                <p>
+                                    boisson
+                                </p>
+                                <p>
+                                    dessert
+                                </p>                    
+                            </div>
+                            <div class="prix_menu3">
+                                <p>
+                                    12.90
+                                </p>
+                            </div>
                         </div>
                     </div>
+
                     <div class="livraison">
 
                     </div>
                 </div>
             </div>
             <div class="background2">
-                    <div class="container_second">
-                    <div class="Histoire">
+                <div class="container_second">
+                    <div id="notreHistoire">
                         <h2 class="h2Histoire">
                             <hr>
                             NOTRE HISTOIRE
@@ -197,7 +225,7 @@
                     <!-- <div class="Team">
 
                     </div> -->
-                    <div class="Partenaires">
+                    <div id="NosPartenaires">
                         <h2 class=h2Partenaires>
                             <hr>
                             NOS PARTENAIRES
