Reglage d'image et de link

--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Description de ma page"/>
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css>
+        <link rel="icon png" type="image/png" href="images/carniumLogo2.png">
         <script src="https://kit.fontawesome.com/b8300cc200.js"></script>
         <link href="styles/main.css" rel="stylesheet">
     </head>
@@ -14,7 +15,9 @@
         <header id="header">
             <nav>
                 <div class="imageLogoCarnium">
-                    <img src="images/SVG/LogoRouge.svg" alt="LogoCarnium">
+                    <a href="index.html" title="Accueil">
+                        <img src="images/SVG/LogoRouge.svg" alt="LogoCarnium">
+                    </a>
                 </div>
                 <ul class="containerHeader">
                     <li class="menuItem current">
@@ -35,7 +38,7 @@
                         title="Nos partenaires">NOS PARTENAIRES</a>
                     </li>
                     <li class="menuItem">
-                        <a href="pages/contact.html" title="Contact & Reservation">CONTACT / RESERVATION</a>
+                        <a href="pages/contact.html" title="Contact & Commande">CONTACT / COMMANDE</a>
                     </li>
                     <li class="menuItem current">
                         <a href="index.html" 
@@ -43,10 +46,14 @@
                     </li>
                 </ul>
                 <div class="imageLogoFacebook">
-                    <img src="images/SVG/FB.svg" alt="LogoFacebook">
+                    <a href="" title="Compte Facebook">
+                      <img src="images/SVG/FB.svg" alt="LogoFacebook">
+                    </a>
                 </div>
                 <div class="imageLogoInstagram">
-                    <img src="images/SVG/instagram-logo.svg" alt="LogoFacebook">
+                    <a href="Compte Instagram">
+                        <img src="images/SVG/instagram-logo.svg" alt="LogoInstagram">
+                    </a>
                 </div>
             </nav>
         </header>
@@ -296,13 +303,13 @@
               </div>
               <div class="LinkPage">
                 <ul>
-                  <li><a href="#">ACCUEIL</a></li>
-                  <li><a href="#">MENU</a></li>
+                  <li><a href="index.html">ACCUEIL</a></li>
+                  <li><a href="#menu">MENU</a></li>
                   <li><a href="#">LE CONCEPT</a></li>
-                  <li><a href="#">NOTRE HISTOIRE</a></li>
+                  <li><a href="#notreHistoire">NOTRE HISTOIRE</a></li>
                   <li><a href="#">LA TEAM</a></li>
                   <li><a href="pages/contact.html">CONTACT/RÉSERVATION</a></li>
-                  <li><a href="#">NOS PARTENAIRES</a></li>
+                  <li><a href="#NosPartenaires">NOS PARTENAIRES</a></li>
                   <li><a href="#">FAQ</a></li>
                 </ul>
               </div>
