--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <title>CARNIUM</title>
         <meta name="description" content="Description de ma page"/>
-        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-        <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css>
+        <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+        <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
         <link rel="icon png" type="image/png" href="images/carniumLogo2.png">
         <script src="https://kit.fontawesome.com/b8300cc200.js"></script>
         <link href="styles/main.css" rel="stylesheet">
