--- a/CarniumWeb/index.html
+++ b/CarniumWeb/index.html
@@ -8,7 +8,7 @@
         <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
         <link rel="icon png" type="image/png" href="images/carniumLogo2.png">
-        <script src="https://kit.fontawesome.com/b8300cc200.js"></script>
+        <!-- <script src="https://kit.fontawesome.com/b8300cc200.js"></script> -->
         <link href="styles/main.css" rel="stylesheet">
     </head>
     <body>
@@ -31,7 +31,7 @@
                         title="Notre histoire">NOTRE HISTOIRE</a>
                     </li>
                     <li class="menuItem">
-                        <a href="apropos.html" title="La team">LA TEAM</a>
+                        <a href="#" title="La team">LA TEAM</a>
                     </li>
                     <li class="menuItem current">
                         <a href="#NosPartenaires" 
