--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                         <img src="images/SVG/LogoRouge.svg" alt="LogoCarnium">
                     </a>
                 </div>
+                <div class="burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                </div>
                 <ul class="containerHeader">
                     <li class="menuItem current">
                         <a href="index.html" title="Accueil">ACCUEIL</a>
@@ -34,26 +39,29 @@
                         <a href="#" title="La team">LA TEAM</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="#NosPartenaires" 
-                        title="Nos partenaires">NOS PARTENAIRES</a>
-                    </li>
-                    <li class="menuItem">
-                        <a href="pages/contact.html" title="Contact & Commande">CONTACT / COMMANDE</a>
+                        <a href="#NosPartenaires" title="Nos partenaires">NOS PARTENAIRES</a>
                     </li>
                     <li class="menuItem current">
-                        <a href="index.html" 
-                        title="Fas">FAQ</a>
+                        <a href="#Commande" title="Commande">COMMANDE</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="pages/contact.html" title="Contact & Commande">CONTACT / GROUPE</a>
+                    </li>
+                    <li class="menuItem current">
+                        <a href="index.html" title="Fas">FAQ</a>
                     </li>
                 </ul>
-                <div class="imageLogoFacebook">
-                    <a href="" title="Compte Facebook">
-                      <img src="images/SVG/FB.svg" alt="LogoFacebook">
-                    </a>
-                </div>
-                <div class="imageLogoInstagram">
-                    <a href="Compte Instagram">
-                        <img src="images/SVG/instagram-logo.svg" alt="LogoInstagram">
-                    </a>
+                <div class="reseauxSoci">
+                    <div class="imageLogoFacebook">
+                        <a href="" title="Compte Facebook">
+                        <img src="images/SVG/FB.svg" alt="LogoFacebook">
+                        </a>
+                    </div>
+                    <div class="imageLogoInstagram">
+                        <a href="Compte Instagram">
+                            <img src="images/SVG/instagram-logo.svg" alt="LogoInstagram">
+                        </a>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -110,7 +118,7 @@
                     <img src="images/SVG/carniumC.svg" alt="logo C de carnium">
                     <h3> CARNIUM </h3>
                     <h4>  FRESH & PREMIUM </h4>
-                    <a href="#" id="reservationLink" title="Reservez"> <span>RESERVATION</span></a>
+                    <a href="#" id="commandeLink" title="Commande"> <span>Commande</span></a>
                 </div>
             </div>
             <div class="background">
