--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
         <div class="form_title">
           <h4>Faire une demande de réservation de groupe</h4>
           <p><em>A partir de 8 personnes</em></p>
-        </div> 
+        </div>
         <form action="" method="get">
             <div>
                 <label for="name">Nom :</label>
@@ -42,7 +42,7 @@
                 <input type="number" id="nbr" name="user_number">
             </div>
             <div>
-                <label for="msg">Informations supplémentaires :</label>
+                <label for="msg">Informations supplémentaires (Disponibilité) :</label>
                 <textarea id="msg" name="user_message"></textarea>
             </div>
             <div class="button">
