--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>CARNIUM</title>
-        <meta name="description" content="Description de ma page"/>
+        <meta name="description" content="Restaurant CARNIUM"/>
         <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
         <link rel="icon png" type="image/png" href="images/carniumLogo.png">
@@ -75,11 +75,6 @@
                     </div>
                     <div class="item">
                         <div class="item__image">
-                            <img src="images/image2.jpeg" alt="hbiba">
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="item__image">
                             <img src="images/image3.jpeg" alt="hbiba">
                         </div>
                     </div>
@@ -115,10 +110,9 @@
                     </div>
                 </div>
                 <div class="containerResevation">
-                    <img src="images/SVG/carniumC.svg" alt="logo C de carnium">
+                    <img class="" src="images/SVG/carniumC.svg" alt="logo C de carnium">
                     <h3> CARNIUM </h3>
-                    <h4>  FRESH & PREMIUM </h4>
-                    <a href="#" id="commandeLink" title="Commande"> <span>Commande</span></a>
+                    <a href="#" id="commandeLink" title="Commande"> <span>COMMANDEZ</span></a>
                 </div>
             </div>
             <div class="background">
@@ -235,10 +229,51 @@
                             </p>
                         </div>
                     </div>
-
-
                     <!-- <div class="Team">
-
+                        <div class="container">
+                            <div id="carousel1">
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image1.jpeg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image3.jpeg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image4.jpeg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image5.jpg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image6.jpeg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image7.jpg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image8.jpeg" alt="hbiba">
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="item__image">
+                                        <img src="images/image9.jpg" alt="hbiba">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div> -->
                     <div id="NosPartenaires">
                         <h2 class=h2Partenaires>
