--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <title>CARNIUM</title>
         <meta name="description" content="Restaurant CARNIUM"/>
+        <!-- <link rel="stylesheet" media="(orientation:portrait)" href="portrait.css"> -->
+        <!-- <link rel="stylesheet" media="(orientation:landscape)" href="paysage.css"> -->
         <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
         <link rel="stylesheet" href=https://kit-free.fontawesome.com/releases/latest/css/free.min.css> -->
         <link rel="icon png" type="image/png" href="images/carniumLogo.png">
@@ -24,7 +26,7 @@
                         <span></span>
                         <span></span>
                 </div>
-                <ul class="containerHeader">
+                <ul id="containerMobil" class="containerHeader">
                     <li class="menuItem current">
                         <a href="index.html" title="Accueil">ACCUEIL</a>
                     </li>
