--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
                             <img src="images/image5.jpg" alt="hbiba">
                         </div>
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <div class="item__image">
                             <img src="images/image6.jpeg" alt="hbiba">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="item">
                         <div class="item__image">
                             <img src="images/image7.jpg" alt="hbiba">
                         </div>
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <div class="item__image">
                             <img src="images/image8.jpeg" alt="hbiba">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="item">
                         <div class="item__image">
                             <img src="images/image9.jpg" alt="hbiba">
