--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#Commande" title="Commande">COMMANDE</a>
                     </li>
                     <li class="menuItem">
-                        <a href="pages/contact.html" title="Contact & Commande">CONTACT / GROUPE</a>
+                        <a href="pages/contact.html" title="Contact & Commande">CONTACT /GROUPE</a>
                     </li>
                     <li class="menuItem current">
                         <a href="index.html" title="Fas">FAQ</a>
@@ -343,7 +343,7 @@
             <div class="PageDown">
               <div class="info">
                 <p>Carnium</p>
-                <p>Mail : yassine.abied@gmail.com</p>
+                <p>Mail : restautant@carnium.com</p>
                 <p>Tél : 01 46 81 58 74</p>
               </div>
               <div class="LinkPage">
