--- a/index.html
+++ b/index.html
@@ -231,52 +231,72 @@
                             </p>
                         </div>
                     </div>
-                    <!-- <div class="Team">
+                    <div class="Team">
                         <div class="container">
-                            <div id="carousel1">
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image1.jpeg" alt="hbiba">
+                            <div id="carousel2">
+                                <div class="item1">
+                                    <div class="item__image1">
+                                        <img src="images/man.png" alt="hbiba">
+                                        <div>
+                                            <h2>
+                                            Yacine   
+                                            </h2>
+                                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image3.jpeg" alt="hbiba">
+                                <div class="item1">
+                                    <div class="item__image1">
+                                        <img src="images/girl.png" alt="hbiba">
+                                        <div>
+                                            <h2>
+                                            Yacine  
+                                            </h2>
+                                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image4.jpeg" alt="hbiba">
+                                <div class="item1">
+                                    <div class="item__image1">
+                                        <img src="images/girl1.png" alt="hbiba">
+                                        <div>
+                                            <h2>
+                                            Yacine  
+                                            </h2>
+                                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image5.jpg" alt="hbiba">
+                                <div class="item1">
+                                    <div class="item__image1">
+                                        <img src="images/boy.png" alt="hbiba">
+                                        <div>
+                                            <h2>
+                                            Yacine  
+                                            </h2>
+                                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image6.jpeg" alt="hbiba">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image7.jpg" alt="hbiba">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image8.jpeg" alt="hbiba">
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="item__image">
-                                        <img src="images/image9.jpg" alt="hbiba">
+                                <div class="item1">
+                                    <div class="item__image1">
+                                        <img src="images/girl2.png" alt="hbiba">
+                                        <div>
+                                            <h2>
+                                            Yacine  
+                                            </h2>
+                                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div> 
                     <div id="NosPartenaires">
                         <h2 class=h2Partenaires>
                             <hr>
