modif slider team

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         title="Notre histoire">NOTRE HISTOIRE</a>
                     </li>
                     <li class="menuItem">
-                        <a href="#" title="La team">LA TEAM</a>
+                        <a href="#team" title="La team">LA TEAM</a>
                     </li>
                     <li class="menuItem current">
                         <a href="#NosPartenaires" title="Nos partenaires">NOS PARTENAIRES</a>
@@ -231,7 +231,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="Team">
+                    <div id="team">
                         <div class="container">
                             <div id="carousel2">
                                 <div class="item1">
@@ -372,7 +372,7 @@
                   <li><a href="#menu">MENU</a></li>
                   <li><a href="#">LE CONCEPT</a></li>
                   <li><a href="#notreHistoire">NOTRE HISTOIRE</a></li>
-                  <li><a href="#">LA TEAM</a></li>
+                  <li><a href="#team">LA TEAM</a></li>
                   <li><a href="pages/contact.html">CONTACT/RÉSERVATION</a></li>
                   <li><a href="#NosPartenaires">NOS PARTENAIRES</a></li>
                   <li><a href="#">FAQ</a></li>
