--- a/index.html
+++ b/index.html
@@ -232,15 +232,20 @@
                         </div>
                     </div>
                     <div id="team">
+                        <h2 class="h2Team">
+                            <hr>
+                            NOTRE TEAM
+                            <hr>
+                        </h2>
                         <div class="container">
                             <div id="carousel2">
                                 <div class="item1">
                                     <div class="item__image1">
                                         <img src="images/man.png" alt="hbiba">
                                         <div>
-                                            <h2>
+                                            <h3>
                                             Yacine   
-                                            </h2>
+                                            </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
                                         </div>
@@ -250,9 +255,9 @@
                                     <div class="item__image1">
                                         <img src="images/girl.png" alt="hbiba">
                                         <div>
-                                            <h2>
+                                            <h3>
                                             Yacine  
-                                            </h2>
+                                            </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
                                         </div>
@@ -262,9 +267,9 @@
                                     <div class="item__image1">
                                         <img src="images/girl1.png" alt="hbiba">
                                         <div>
-                                            <h2>
+                                            <h3>
                                             Yacine  
-                                            </h2>
+                                            </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
                                         </div>
@@ -274,9 +279,9 @@
                                     <div class="item__image1">
                                         <img src="images/boy.png" alt="hbiba">
                                         <div>
-                                            <h2>
+                                            <h3>
                                             Yacine  
-                                            </h2>
+                                            </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
                                         </div>
@@ -286,9 +291,9 @@
                                     <div class="item__image1">
                                         <img src="images/girl2.png" alt="hbiba">
                                         <div>
-                                            <h2>
+                                            <h3>
                                             Yacine  
-                                            </h2>
+                                            </h3>
                                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, distinctio atque amet, quis error rerum beatae nemo nam asperiores quibusdam consequuntur rem non eos iste reiciendis. Repellat quaerat molestiae in?
                                             </p>
                                         </div>
